Fix: corner cut off on the left side of saerch-bar

--- a/style.css
+++ b/style.css
@@ -4,13 +4,18 @@
     border: 2px solid dimgrey;
     border-radius: 10px;
     display: flex;
+    overflow: hidden;
     align-items: center;
+}
+.search-input:focus {
+    outline: none;
 }
 
 .search-input {
     border: none;
     width: 450px;
     padding: 13px;
+    border-radius: 10px 0 0 10px;
     font-size: large;
 }
 
